--- a/code/index.html
+++ b/code/index.html
@@ -20,7 +20,14 @@
 
   <div data-role="content">
     <div data-role="fieldcontain">
-		<button id="getLocationButton">Get Location</button>
+	
+		<label for="flip-1">Flip switch:</label>
+		<select name="flip-1" id="flip-1" data-role="slider">
+			<option value="off">Off</option>
+			<option value="on" id="getLocationButton">On</option>
+		</select> 
+		
+		<!--<button id="getLocationButton">Get Location</button>-->
       	<label for="longtext">Longitude:</label>
       	<input type="text" name="longtext" id="longtext" value=""  />
       	
